# datathon-7mlet-grupo-65

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  make.ps1  pyproject.toml
data/golden_set/: .gitkeep  evaluation_cases.jsonl
data/kaggle/: README.md  data_dictionary.md
data/processed/: .gitkeep
data/synthetic_enrichment/: .gitkeep  README.md
docs/: .gitkeep  architecture-azure.md  lgpd-plan.md  mlops-plan.md  model-card.md  system-card.md
notebooks/: .gitkeep  01_eda.ipynb  02_bandit_simulation.ipynb
reports/: .gitkeep  bandit-comparison.md  data-generation.md  data-quality.md  evaluation.md  mlops-monitoring.md  technical-report.md
src/aep/: __init__.py  cli.py  config.py  pipeline.py
src/aep/assistant/: __init__.py  assistant.py  cli.py  documents.py  provider.py  rag.py
src/aep/bandits/: __init__.py  base.py  cli.py  context_free.py  environment.py  linucb.py  neural.py  report.py  runner.py  serving.py  simulator.py
src/aep/data/: __init__.py  cli.py  loader.py  reports.py  schema.py  source.py
src/aep/evaluation/: __init__.py  cli.py  fairness.py  golden.py  ope.py  report.py
src/aep/mlops/: __init__.py  cli.py  drift.py  lifecycle.py  promotion.py  registry.py  report.py  tracking.py
src/aep/service/: __init__.py  app.py  audit.py  schemas.py
src/aep/synthetic/: __init__.py  catalog.py  cli.py  config.py  features.py  generate.py  report.py  reward_model.py
tests/: test_bandits.py  test_data.py  test_evaluation.py  test_mlops.py  test_service.py  test_smoke.py  test_synthetic.py
