[project]
name = "aep"
version = "0.1.0"
description = "Adaptive Experimentation Platform — multi-armed bandits + LLM/RAG assistant for offer decisioning (Datathon 7MLET, Grupo 65)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Datathon 7MLET - Grupo 65" }]
keywords = ["multi-armed-bandits", "thompson-sampling", "ucb", "contextual-bandit", "mlops", "rag"]

# Core dependencies — kept light so the base environment installs fast and
# reliably. Stage-specific heavy dependencies (PyTorch, MLflow, FastAPI, FAISS,
# Anthropic) live in optional dependency-groups below and are installed by the
# stage that needs them. This keeps the cumulative-stages workflow honest.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
aep = "aep.cli:app"

[project.urls]
Homepage = "https://github.com/datathon-7mlet/grupo-65"

# PEP 735 dependency groups (supported by uv). `uv sync` installs the `dev`
# group by default; install everything with `uv sync --all-groups`.
[dependency-groups]
dev = [
    "ruff>=0.4",
    "black>=24.3",
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "mypy>=1.9",
]
eda = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "scikit-learn>=1.4",
]
ml = [
    "torch>=2.2",
    "mlflow>=2.12",
    "scikit-learn>=1.4",
]
service = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]
rag = [
    "faiss-cpu>=1.8",
    "chromadb>=0.5",
]
llm = [
    "anthropic>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aep"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # black handles line length

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
packages = ["aep"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
